Changed packaging to jar

--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>VehicleManagementSystem</name>
 	<description>VehicleManagement</description>
-	<packaging>war</packaging>
+	<!--  <packaging>war</packaging> -->
 	<properties>
 		<java.version>11</java.version>
 	</properties>
