--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.datasource.password=root1234
 spring.datasource.username=root
 spring.datasource.url=jdbc:mysql://database-1.cfut4jrpedg6.us-east-2.rds.amazonaws.com:3306/fleetappdb?serverTimezone=UTC
 spring.jpa.hibernate.ddl-auto=update
+spring.sql.init.mode=ALWAYS
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
