--- a/application.properties
+++ b/application.properties
@@ -1,7 +1,7 @@
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.password=root1234
-spring.datasource.username=root
+spring.datasource.password=@Dragonballz99
+spring.datasource.username=test
 spring.datasource.url=jdbc:mysql://database-1.cfut4jrpedg6.us-east-2.rds.amazonaws.com:3306/fleetappdb?serverTimezone=UTC
 spring.jpa.hibernate.ddl-auto=update
 spring.sql.init.mode=ALWAYS
