Added defaulr creds for spring security

--- a/application.properties
+++ b/application.properties
@@ -8,3 +8,5 @@ spring.sql.init.mode=ALWAYS
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 debug=true
 spring.jpa.show-sql=true
+spring.security.user.name=root
+spring.security.user.password=root
