--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,6 @@ spring.datasource.url=jdbc:mysql://database-1.cfut4jrpedg6.us-east-2.rds.amazona
 spring.jpa.hibernate.ddl-auto=update
 spring.sql.init.mode=ALWAYS
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.security.user.name=user1
+spring.security.user.password=root
+spring.security.user.roles=USER
