--- a/pom.xml
+++ b/pom.xml
@@ -66,7 +66,12 @@
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-
+<!-- Include GSON dependency -->
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.8.4</version><!--$NO-MVN-MAN-VER$ -->
+		</dependency>
 
 	</dependencies>
 
