--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.password=root1234
-!spring.datasource.password=root
+!spring.datasource.password=root1234
+spring.datasource.password=root
 spring.datasource.username=root
-spring.datasource.url=jdbc:mysql://database-1.cfut4jrpedg6.us-east-2.rds.amazonaws.com:3306/fleetappdb?serverTimezone=UTC
+!spring.datasource.url=jdbc:mysql://database-1.cfut4jrpedg6.us-east-2.rds.amazonaws.com:3306/fleetappdb?serverTimezone=UTC
 spring.jpa.hibernate.ddl-auto=update
 spring.sql.init.mode=ALWAYS
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
@@ -12,4 +12,4 @@ spring.jpa.show-sql=true
 spring.security.user.name=user1
 spring.security.user.password=root
 spring.security.user.roles=USER
-!spring.datasource.url=jdbc:mysql://localhost:3306/fleetappdb?serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/fleetappdb?serverTimezone=UTC
