--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -3,10 +3,7 @@ name: Maven Build and Store Artifact
 on:
   push:
     branches:
-      - main
-  pull_request:
-    branches:
-      - main
+      - SUB
 
 jobs:
   build:
