--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -22,8 +22,10 @@ jobs:
     - name: Build with Maven
       run: mvn clean package -B
       
-    - name: Archive artifact
-      uses: actions/upload-artifact@v2
+    - run: mkdir staging && cp target/*.jar staging
+    - uses: actions/upload-artifact@v4
       with:
+      name: Package
+      path: staging
         name: my-artifact
         path: target/*.jar
